# vibe-forge

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: cli.rs  config.rs  error.rs  main.rs
src/commands/: attach.rs  cleanup.rs  doctor.rs  init.rs  kill.rs  mod.rs  new.rs  plan.rs  refresh_repos.rs  review.rs  spawn.rs  status.rs
src/domain/: agent.rs  mod.rs  plan.rs  session.rs  template.rs  workspace.rs
src/infra/: claude.rs  clipboard.rs  gh.rs  git.rs  mod.rs  state.rs  tmux.rs  watcher.rs
src/tui/: app.rs  mod.rs
src/tui/widgets/: agent_list.rs  mod.rs  output_viewer.rs  overview.rs  session_detail.rs  session_list.rs  status_bar.rs
templates/: implementer.md  planner.md  refactorer.md  reviewer.md  tester.md
