[package]
name = "vibe"
version = "0.1.0"
edition = "2024"
description = "Multi-agent Claude Code orchestrator with TUI dashboard"
license = "MIT"

[[bin]]
name = "vibe"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.30"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Git
git2 = "0.20"

# File watching
notify = "8"

# Clipboard
arboard = "3"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
which = "7"

# OS notifications
notify-rust = "4"

# POSIX process checks
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
